# thesaurusbt

./: .gitattributes  LICENSE  README.md  pyproject.toml
datasets/: bimedia_sales_dataset.parquet  validation_dataset.json
thesaurusBT/: __main__.py
thesaurusBT/algorithms/: balanced_kmeans.py  catboost_features_selection.py  homer.py  minhash.py
thesaurusBT/experiments/lib/: functions.py
thesaurusBT/experiments/lib/parameters_optimization/: RF_paramter_optimization.ipynb  RF_paramter_optimization_th.ipynb  SVM_paramter_optimization_pv.ipynb  SVM_paramter_optimization_th.ipynb
thesaurusBT/experiments/preprocessing/: clean_minhash_pivot.py  clean_pivot.py  clean_thesaurusbt_pivot.py
thesaurusBT/experiments/preprocessing/input/thesaurus_ressources/: dictionnaire_familles.json  identify_type.json  identify_type_level.json
thesaurusBT/experiments/processing/: labelling_br_rf.py  labelling_br_svm.py  labelling_homer.py
thesaurusBT/experiments/results/: results.ipynb  results.py
